--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.7",
@@ -23,6 +23,7 @@
     "events": "^3.3.0",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
+    "expo-clipboard": "^7.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
