--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "stream-browserify": "^3.0.0",
-    "web-streams-polyfill": "^4.1.0"
+    "web-streams-polyfill": "^4.1.0",
+    "expo-linear-gradient": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
