--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
@@ -28,6 +29,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
@@ -50,8 +52,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "stream-browserify": "^3.0.0",
-    "web-streams-polyfill": "^4.1.0",
-    "expo-image-picker": "~16.1.4"
+    "web-streams-polyfill": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
