--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "migrate": "node ./scripts/run-migrations.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -21,11 +22,13 @@
     "@supabase/supabase-js": "^2.49.4",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "events": "^3.3.0",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "^7.1.4",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
