recent chat feature in AI tutor kinda works now, need to reload app to see recent chats and continue in them

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "migrate": "node ./scripts/run-migrations.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "migrate": "node ./scripts/run-migrations.js",
+    "setup": "node scripts/setup-env.js",
     "lint": "expo lint"
   },
   "dependencies": {
