--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
@@ -24,7 +25,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "events": "^3.3.0",
-    "expo": "^53.0.9",
+    "expo": "^53.0.11",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "^7.1.4",
     "expo-constants": "~17.1.6",
@@ -46,6 +47,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -55,7 +57,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "stream-browserify": "^3.0.0",
-    "web-streams-polyfill": "^4.1.0"
+    "web-streams-polyfill": "^4.1.0",
+    "expo-auth-session": "~6.2.0",
+    "expo-crypto": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
