the google auth works pretty much

--- a/app.json
+++ b/app.json
@@ -10,7 +10,20 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.satez.app"
+      "bundleIdentifier": "com.satez.app",
+      "associatedDomains": [
+        "applinks:satez.app"
+      ],
+      "infoPlist": {
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "satez",
+              "com.satez.app"
+            ]
+          }
+        ]
+      }
     },
     "android": {
       "package": "com.satez.app",
@@ -18,6 +31,19 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "satez",
+              "host": "auth"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ],
       "edgeToEdgeEnabled": true
     },
     "web": {
