--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-google-signin": "^2.1.1",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -69,6 +68,10 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~7.2.2",
+    "react-native-reanimated": "~3.17.4"
   },
   "private": true
 }
